2009-12-28  Piotr Fusik  <fox@scene.pl>
  Commiting patch submitted by Tomasz Krasuski <tomasz.krasuski@interia.pl>
* DOC/USAGE, atari.c, atari800.man, atari_sdl.c, colours.[ch],
  colours_external.[ch], colours_ntsc.[ch], colours_pal.[ch] filter_ntsc.[ch],
  configure.ac, ui.c, atari_ntsc/atari_ntsc.[ch],
  atari_ntsc/atari_ntsc_config.h, atari_ntsc/atari_ntsc_impl.h:
  1. Removed Atari800-specific code from the atari_ntsc library, and placed it
  in a new module, FILTER_NTSC. This new module serves as an interface between
  Atari800 and Blargg's library.
  2. Removed the palette generation code from atari_ntsc and placed it in a new
  module, COLOURS_NTSC. Palette generation is from now on used both in
  "standard" mode and in NTSC-filtered mode. Old default palettes have been
  removed from the COLOURS module.
  3. Introduced a new module, COLOURS_PAL, that includes improved routines for
  PAL palette generation. PAL Ataris produce colours in a similar way to NTSC
  ones; the only difference lies in phases of hues in YIQ (or YUV) colourspace.
  Unfortunately, while differences between hue phases are constant in NTSC,
  it's not the case in PAL. I have failed in trying to develop a formula that
  lies behind PAL hue phases, so I gave up on that; instead I measured PAL hue
  phases based on several screenshots, and stuffed them in the colour_angles
  table (see colours_pal.c->GeneratePalette()). The result looks very plausible
  and accurately represents colours of my 65XE, at least.
  4. Controls for contrast, brightness, saturation, gamma, hue and colordelay
  now apply to both NTSC and PAL palettes (hue and colordelay only to NTSC),
  regardless of NTSC filter. Palette generation is now on by default, therefore
  parameters -genpaln/p are not needed anymore.
  5. Support for externally-loaded palettes has moved to a new module,
  COLOURS_EXTERNAL. Brightness, contrast, saturation and gamma can now be